--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -303,8 +303,14 @@
             box-shadow: 0 10px 30px rgba(248, 104, 37, 0.15);
         }
         .download-section {
-            background: linear-gradient(135deg, rgba(248, 104, 37, 0.1) 0%, rgba(248, 104, 37, 0.05) 100%);
-            border: 2px dashed #F86825;
+            background: rgba(30, 41, 59, 0.5);
+            border: 1px solid rgba(71, 85, 105, 0.5);
+            transition: all 0.3s ease;
+        }
+
+        .download-section:hover {
+            background: rgba(30, 41, 59, 0.8);
+            border-color: rgba(71, 85, 105, 0.8);
         }
     </style>
 </head>
@@ -406,20 +412,20 @@
                         </p>
 
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6">
-                            <div class="bg-red-500/10 border border-red-500/30 rounded-lg p-4">
-                                <h4 class="text-red-400 font-semibold mb-2">❌ 기계 가독성 낮음</h4>
+                            <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-4 hover:border-slate-600 transition-all">
+                                <h4 class="text-slate-300 font-semibold mb-2">❌ 기계 가독성 낮음</h4>
                                 <p class="text-sm text-slate-400">검색 엔진이나 AI가 내용을 정확히 이해하기 어려움</p>
                             </div>
-                            <div class="bg-red-500/10 border border-red-500/30 rounded-lg p-4">
-                                <h4 class="text-red-400 font-semibold mb-2">❌ 재사용성 낮음</h4>
+                            <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-4 hover:border-slate-600 transition-all">
+                                <h4 class="text-slate-300 font-semibold mb-2">❌ 재사용성 낮음</h4>
                                 <p class="text-sm text-slate-400">다른 시스템과 통합이 어려움</p>
                             </div>
-                            <div class="bg-red-500/10 border border-red-500/30 rounded-lg p-4">
-                                <h4 class="text-red-400 font-semibold mb-2">❌ 추론 불가능</h4>
+                            <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-4 hover:border-slate-600 transition-all">
+                                <h4 class="text-slate-300 font-semibold mb-2">❌ 추론 불가능</h4>
                                 <p class="text-sm text-slate-400">"데이터 정확성이 0.9 이하라면?" 같은 논리적 추론 불가</p>
                             </div>
-                            <div class="bg-red-500/10 border border-red-500/30 rounded-lg p-4">
-                                <h4 class="text-red-400 font-semibold mb-2">❌ 버전 관리 어려움</h4>
+                            <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-4 hover:border-slate-600 transition-all">
+                                <h4 class="text-slate-300 font-semibold mb-2">❌ 버전 관리 어려움</h4>
                                 <p class="text-sm text-slate-400">표준 개정 시 변경사항 추적 복잡</p>
                             </div>
                         </div>
@@ -427,8 +433,8 @@
 
                     <div class="mb-8">
                         <h3 class="text-2xl font-semibold text-slate-200 mb-4">해결책: 온톨로지</h3>
-                        <div class="bg-emerald-500/10 border border-emerald-500/30 rounded-lg p-6 mb-6">
-                            <p class="text-emerald-400 text-lg font-semibold text-center mb-3">
+                        <div class="bg-slate-800/50 border border-teal-500/40 rounded-lg p-6 mb-6">
+                            <p class="text-teal-400 text-lg font-semibold text-center mb-3">
                                 개념(Classes) + 관계(Properties) + 추론 규칙(Axioms) = 온톨로지
                             </p>
                             <p class="text-slate-300 text-center text-sm">
@@ -438,20 +444,20 @@
 
                         <h4 class="text-xl font-semibold text-slate-200 mb-3">온톨로지 변환의 장점</h4>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                            <div class="bg-emerald-500/10 border border-emerald-500/30 rounded-lg p-4">
-                                <h5 class="text-emerald-400 font-semibold mb-2">✅ 기계 이해 가능</h5>
+                            <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-4 hover:border-teal-500/40 transition-all">
+                                <h5 class="text-teal-400 font-semibold mb-2">✅ 기계 이해 가능</h5>
                                 <p class="text-sm text-slate-400">RDF/OWL 형식으로 컴퓨터가 의미를 파악</p>
                             </div>
-                            <div class="bg-emerald-500/10 border border-emerald-500/30 rounded-lg p-4">
-                                <h5 class="text-emerald-400 font-semibold mb-2">✅ SPARQL 쿼리</h5>
+                            <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-4 hover:border-teal-500/40 transition-all">
+                                <h5 class="text-teal-400 font-semibold mb-2">✅ SPARQL 쿼리</h5>
                                 <p class="text-sm text-slate-400">"모든 고유 품질 특성을 찾아라" 같은 질의 가능</p>
                             </div>
-                            <div class="bg-emerald-500/10 border border-emerald-500/30 rounded-lg p-4">
-                                <h5 class="text-emerald-400 font-semibold mb-2">✅ 추론 엔진 활용</h5>
+                            <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-4 hover:border-teal-500/40 transition-all">
+                                <h5 class="text-teal-400 font-semibold mb-2">✅ 추론 엔진 활용</h5>
                                 <p class="text-sm text-slate-400">규칙 기반 자동 검증 및 추론</p>
                             </div>
-                            <div class="bg-emerald-500/10 border border-emerald-500/30 rounded-lg p-4">
-                                <h5 class="text-emerald-400 font-semibold mb-2">✅ 상호운용성</h5>
+                            <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-4 hover:border-teal-500/40 transition-all">
+                                <h5 class="text-teal-400 font-semibold mb-2">✅ 상호운용성</h5>
                                 <p class="text-sm text-slate-400">다른 온톨로지와 연결 (Linked Data)</p>
                             </div>
                         </div>
@@ -1094,19 +1100,19 @@ ORDER BY ?labelKo</textarea>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                    <!-- PDF Report Section -->
-                    <div class="bg-gradient-to-r from-orange-500/20 to-purple-500/20 border-2 border-orange-500 rounded-lg p-8">
-                        <div class="text-center">
-                            <div class="text-6xl mb-4">📑</div>
-                            <h3 class="text-2xl font-bold text-white mb-3">PDF 보고서</h3>
-                            <p class="text-slate-300 mb-6">
-                                이 아티클의 전체 내용을 PDF 형식으로 다운로드할 수 있습니다.
-                            </p>
-                            <button class="btn-primary px-8 py-4 rounded-lg text-lg font-semibold inline-block" onclick="alert('PDF 보고서는 곧 제공될 예정입니다.')">
-                                📥 PDF 보고서 다운로드 (준비 중)
-                            </button>
+                        <!-- PDF Report -->
+                        <div class="download-section rounded-lg p-6">
+                            <div class="flex items-start gap-4">
+                                <div class="text-4xl">📑</div>
+                                <div class="flex-1">
+                                    <h3 class="text-lg font-semibold text-white mb-2">PDF 보고서</h3>
+                                    <p class="text-sm text-slate-400 mb-3">전체 아티클 PDF 형식</p>
+                                    <button class="btn-primary px-4 py-2 rounded-lg text-sm inline-block" onclick="alert('PDF 보고서는 곧 제공될 예정입니다.')">
+                                        📥 report.pdf (준비 중)
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -1181,18 +1187,26 @@ ORDER BY ?labelKo</textarea>
         let currentLayout = 'cose';
         window.cyInitialized = false;
 
-        // Harmonious color palette
+        // Minimal color palette - Pebblous Brand Colors
+        // Philosophy: 최소한의 색상으로 최대 효과
+        // Only 3 colors: Orange (#F86825) + Teal (#14b8a6) + Slate (#475569)
         const colors = {
-            model: '#6366f1',      // Indigo - 모델
-            root: '#10b981',       // Emerald - 루트
-            category: '#8b5cf6',   // Purple - 카테고리
-            inherent: '#F86825',   // Orange (Pebblous) - 고유 특성
-            system: '#ec4899',     // Pink - 시스템 의존
-            measure: '#f59e0b',    // Amber - 측정
+            primary: '#F86825',    // Orange - 브랜드 메인
+            secondary: '#14b8a6',  // Teal - 보색 대비
+            neutral: '#475569',    // Slate - 중립
+            accent: '#06b6d4',     // Cyan - 특수 강조 (최소 사용)
+
+            // Mapping to node types (3-4 colors only)
+            model: '#14b8a6',      // Teal - 모델
+            root: '#14b8a6',       // Teal - 루트
+            category: '#14b8a6',   // Teal - 카테고리 (통일)
+            inherent: '#F86825',   // Orange - 고유 특성 (브랜드)
+            system: '#06b6d4',     // Cyan - 시스템 의존 (accent)
+            measure: '#F86825',    // Orange - 측정 (브랜드 통일)
             dataset: '#06b6d4',    // Cyan - 데이터셋
-            requirement: '#84cc16', // Lime - 요구사항
-            edge: '#64748b',       // Slate
-            edgeArrow: '#F86825'   // Orange
+            requirement: '#14b8a6', // Teal - 요구사항
+            edge: '#475569',       // Slate - 엣지 (중립)
+            edgeArrow: '#F86825'   // Orange - 화살표 (브랜드)
         };
 
         // Ontology structure data
