--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -836,6 +836,74 @@
                 <div class="card p-8">
                     <h2 class="text-3xl font-bold mb-6 text-white">온톨로지 설계 과정</h2>
 
+                    <!-- OWL vs RDF 설명 -->
+                    <div class="mb-8">
+                        <h3 class="text-2xl font-semibold text-slate-200 mb-4">OWL과 RDF의 차이</h3>
+                        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
+                            <div class="bg-slate-800/50 border border-teal-500/40 rounded-lg p-6">
+                                <div class="flex items-center gap-3 mb-3">
+                                    <div class="text-3xl">📋</div>
+                                    <h4 class="text-xl font-semibold text-teal-400">OWL (Ontology)</h4>
+                                </div>
+                                <p class="text-sm text-slate-300 mb-3">
+                                    <strong class="text-white">온톨로지 스키마</strong> - 지식의 구조와 규칙을 정의
+                                </p>
+                                <ul class="space-y-2 text-sm text-slate-400">
+                                    <li>✓ <strong class="text-slate-300">클래스 정의</strong>: Accuracy, Completeness 등 30+ 클래스</li>
+                                    <li>✓ <strong class="text-slate-300">관계 정의</strong>: hasCharacteristic, measuredBy 등</li>
+                                    <li>✓ <strong class="text-slate-300">제약 조건</strong>: 계층 구조, 규칙</li>
+                                </ul>
+                                <div class="mt-4 p-3 bg-slate-900/50 rounded text-xs text-slate-400">
+                                    <strong class="text-teal-400">예시:</strong> "Accuracy는 InherentCharacteristic의 subClass이다"
+                                </div>
+                                <div class="mt-3 text-xs text-slate-500">
+                                    📄 iso5259-2-ontology.owl (434 lines)
+                                </div>
+                            </div>
+
+                            <div class="bg-slate-800/50 border border-orange-500/40 rounded-lg p-6">
+                                <div class="flex items-center gap-3 mb-3">
+                                    <div class="text-3xl">📊</div>
+                                    <h4 class="text-xl font-semibold text-orange-400">RDF (Instances)</h4>
+                                </div>
+                                <p class="text-sm text-slate-300 mb-3">
+                                    <strong class="text-white">온톨로지 인스턴스</strong> - 실제 데이터 예제
+                                </p>
+                                <ul class="space-y-2 text-sm text-slate-400">
+                                    <li>✓ <strong class="text-slate-300">데이터셋 예제</strong>: CustomerDataset</li>
+                                    <li>✓ <strong class="text-slate-300">측정값</strong>: 정확성 0.95, 완전성 0.88</li>
+                                    <li>✓ <strong class="text-slate-300">평가 결과</strong>: 품질 점수, 상태</li>
+                                </ul>
+                                <div class="mt-4 p-3 bg-slate-900/50 rounded text-xs text-slate-400">
+                                    <strong class="text-orange-400">예시:</strong> "CustomerDataset의 정확성 측정값은 0.95이다"
+                                </div>
+                                <div class="mt-3 text-xs text-slate-500">
+                                    📄 iso5259-2-instances.rdf (404 lines, 21 instances)
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-5">
+                            <h4 class="text-lg font-semibold text-white mb-3">💡 비유로 이해하기</h4>
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-sm">
+                                <div class="flex items-start gap-3">
+                                    <span class="text-teal-400 text-xl">🏗️</span>
+                                    <div>
+                                        <strong class="text-teal-400">OWL = 건물 설계도</strong>
+                                        <p class="text-slate-400">어떤 방이 있고, 어떻게 연결되는지 정의</p>
+                                    </div>
+                                </div>
+                                <div class="flex items-start gap-3">
+                                    <span class="text-orange-400 text-xl">🏠</span>
+                                    <div>
+                                        <strong class="text-orange-400">RDF = 실제 건물</strong>
+                                        <p class="text-slate-400">각 방에 무엇이 있는지 구체적 데이터</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="mb-8">
                         <h3 class="text-2xl font-semibold text-slate-200 mb-4">온톨로지 구조</h3>
                         <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-6 mb-6">
@@ -843,23 +911,23 @@
                             <div class="code-block text-sm">
 <pre class="text-slate-300">owl:Thing
 │
-├── <span class="text-blue-400">DataQualityModel</span>
-├── <span class="text-emerald-400">DataQualityCharacteristic</span>
-│   ├── <span class="text-blue-300">InherentCharacteristic</span>
+├── <span class="text-teal-400">DataQualityModel</span>
+├── <span class="text-teal-400">DataQualityCharacteristic</span>
+│   ├── <span class="text-teal-300">InherentCharacteristic</span>
 │   │   ├── Accuracy (정확성)
 │   │   ├── Completeness (완전성)
 │   │   ├── Consistency (일관성)
 │   │   └── ... (6개 더)
-│   ├── <span class="text-purple-300">SystemDependentCharacteristic</span>
+│   ├── <span class="text-teal-300">SystemDependentCharacteristic</span>
 │   │   ├── Accessibility (접근성)
 │   │   └── ... (4개 더)
-│   ├── <span class="text-emerald-300">HybridCharacteristic</span>
+│   ├── <span class="text-teal-300">HybridCharacteristic</span>
 │   │   └── Availability (가용성)
-│   └── <span class="text-orange-300">AdditionalCharacteristic</span>
+│   └── <span class="text-teal-300">AdditionalCharacteristic</span>
 │       └── ... (9개)
-├── <span class="text-yellow-400">DataQualityMeasure</span>
-├── <span class="text-pink-400">MeasurementFunction</span>
-└── <span class="text-cyan-400">TargetData</span></pre>
+├── <span class="text-teal-400">DataQualityMeasure</span>
+├── <span class="text-teal-400">MeasurementFunction</span>
+└── <span class="text-teal-400">TargetData</span></pre>
                             </div>
                         </div>
 
@@ -914,6 +982,35 @@
     &lt;rdfs:range rdf:resource="&iso5259;DataQualityMeasure"/&gt;
     &lt;rdfs:label xml:lang="ko"&gt;측정 방법&lt;/rdfs:label&gt;
 &lt;/owl:ObjectProperty&gt;</pre>
+                            </div>
+                        </div>
+
+                        <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-6">
+                            <h4 class="text-xl font-semibold text-white mb-3">RDF 코드 예시</h4>
+                            <div class="code-block text-sm">
+<pre class="text-orange-400">&lt;!-- Syntactic Accuracy 측정 지표 인스턴스 --&gt;
+&lt;owl:NamedIndividual rdf:about="&iso5259;DQM_01"&gt;
+    &lt;rdf:type rdf:resource="&iso5259;DataQualityMeasure"/&gt;
+    &lt;rdfs:label xml:lang="en"&gt;Syntactic Accuracy&lt;/rdfs:label&gt;
+    &lt;rdfs:label xml:lang="ko"&gt;구문적 정확성&lt;/rdfs:label&gt;
+    &lt;iso5259:measureID&gt;DQM-01&lt;/iso5259:measureID&gt;
+    &lt;iso5259:measureName xml:lang="en"&gt;Syntactic accuracy&lt;/iso5259:measureName&gt;
+    &lt;iso5259:measureName xml:lang="ko"&gt;구문적 정확성&lt;/iso5259:measureName&gt;
+    &lt;iso5259:measures rdf:resource="&iso5259;Accuracy"/&gt;
+    &lt;iso5259:usesFunction rdf:resource="&iso5259;MF_02"/&gt;
+    &lt;rdfs:comment xml:lang="en"&gt;
+        Ratio of data values that are syntactically correct
+        compared to the total number of data values
+    &lt;/rdfs:comment&gt;
+&lt;/owl:NamedIndividual&gt;
+
+&lt;!-- Measurement Function 인스턴스 --&gt;
+&lt;owl:NamedIndividual rdf:about="&iso5259;MF_02"&gt;
+    &lt;rdf:type rdf:resource="&iso5259;MeasurementFunction"/&gt;
+    &lt;rdfs:label xml:lang="en"&gt;Percentage Measurement Function&lt;/rdfs:label&gt;
+    &lt;rdfs:label xml:lang="ko"&gt;백분율 측정 함수&lt;/rdfs:label&gt;
+    &lt;iso5259:measurementFormula&gt;(X / Y) * 100&lt;/iso5259:measurementFormula&gt;
+&lt;/owl:NamedIndividual&gt;</pre>
                             </div>
                         </div>
                     </div>
@@ -971,7 +1068,10 @@
                             <div>
                                 <h4 class="text-sm font-semibold text-slate-200 mb-3">레이아웃</h4>
                                 <div class="flex flex-wrap gap-2">
-                                    <button onclick="changeLayout('cose')" id="layout-cose" class="btn-primary px-4 py-2 rounded text-xs text-white font-semibold">
+                                    <button onclick="changeLayout('breadthfirst')" id="layout-breadthfirst" class="btn-primary px-4 py-2 rounded text-xs text-white font-semibold">
+                                        트리
+                                    </button>
+                                    <button onclick="changeLayout('cose')" id="layout-cose" class="btn-secondary px-4 py-2 rounded text-xs text-white">
                                         계층형
                                     </button>
                                     <button onclick="changeLayout('circle')" id="layout-circle" class="btn-secondary px-4 py-2 rounded text-xs text-white">
@@ -982,9 +1082,6 @@
                                     </button>
                                     <button onclick="changeLayout('grid')" id="layout-grid" class="btn-secondary px-4 py-2 rounded text-xs text-white">
                                         격자
-                                    </button>
-                                    <button onclick="changeLayout('breadthfirst')" id="layout-breadthfirst" class="btn-secondary px-4 py-2 rounded text-xs text-white">
-                                        트리
                                     </button>
                                 </div>
                             </div>
@@ -1404,7 +1501,7 @@ ORDER BY ?labelKo</textarea>
         // Cytoscape.js Initialization
         let cy;
         let currentView = 'ontology';
-        let currentLayout = 'dagre'; // tree layout (default)
+        let currentLayout = 'breadthfirst'; // tree layout (default)
         window.cyInitialized = false;
 
         // Minimal color palette - Pebblous Brand Colors
