--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -935,34 +935,38 @@
                             <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-5">
                                 <h4 class="text-lg font-semibold text-white mb-3">Object Properties (7개)</h4>
                                 <ul class="space-y-2 text-sm text-slate-300">
-                                    <li><span class="text-emerald-400 font-mono">hasCharacteristic</span> - 모델이 포함하는 품질 특성</li>
-                                    <li><span class="text-emerald-400 font-mono">measuredBy</span> - 특성을 측정하는 방법</li>
-                                    <li><span class="text-emerald-400 font-mono">usesFunction</span> - 측정에 사용되는 함수</li>
-                                    <li><span class="text-emerald-400 font-mono">appliesTo</span> - 측정이 적용되는 데이터</li>
-                                    <li><span class="text-emerald-400 font-mono">hasRequirement</span> - 데이터 품질 요구사항</li>
-                                    <li><span class="text-emerald-400 font-mono">relatesTo</span> - 특성 간 연관 관계</li>
-                                    <li><span class="text-emerald-400 font-mono">hasSubCharacteristic</span> - 특성 계층 관계</li>
+                                    <li><span class="text-teal-400 font-mono">hasCharacteristic</span> - 모델이 포함하는 품질 특성</li>
+                                    <li><span class="text-teal-400 font-mono">measuredBy</span> - 특성을 측정하는 방법</li>
+                                    <li><span class="text-teal-400 font-mono">usesFunction</span> - 측정에 사용되는 함수</li>
+                                    <li><span class="text-teal-400 font-mono">appliesTo</span> - 측정이 적용되는 데이터</li>
+                                    <li><span class="text-teal-400 font-mono">hasRequirement</span> - 데이터 품질 요구사항</li>
+                                    <li><span class="text-teal-400 font-mono">relatesTo</span> - 특성 간 연관 관계</li>
+                                    <li><span class="text-teal-400 font-mono">hasSubCharacteristic</span> - 특성 계층 관계</li>
                                 </ul>
                             </div>
 
                             <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-5">
                                 <h4 class="text-lg font-semibold text-white mb-3">Data Properties (7개)</h4>
                                 <ul class="space-y-2 text-sm text-slate-300">
-                                    <li><span class="text-blue-400 font-mono">measureID</span> - 측정 항목 ID (예: "DQM-01")</li>
-                                    <li><span class="text-blue-400 font-mono">measureName</span> - 측정 항목 이름</li>
-                                    <li><span class="text-blue-400 font-mono">measureDescription</span> - 설명</li>
-                                    <li><span class="text-blue-400 font-mono">measurementFormula</span> - 측정 수식</li>
-                                    <li><span class="text-blue-400 font-mono">measurementResult</span> - 측정 결과값</li>
-                                    <li><span class="text-blue-400 font-mono">threshold</span> - 임계값</li>
-                                    <li><span class="text-blue-400 font-mono">standardReference</span> - 표준 참조</li>
+                                    <li><span class="text-teal-400 font-mono">measureID</span> - 측정 항목 ID (예: "DQM-01")</li>
+                                    <li><span class="text-teal-400 font-mono">measureName</span> - 측정 항목 이름</li>
+                                    <li><span class="text-teal-400 font-mono">measureDescription</span> - 설명</li>
+                                    <li><span class="text-teal-400 font-mono">measurementFormula</span> - 측정 수식</li>
+                                    <li><span class="text-teal-400 font-mono">measurementResult</span> - 측정 결과값</li>
+                                    <li><span class="text-teal-400 font-mono">threshold</span> - 임계값</li>
+                                    <li><span class="text-teal-400 font-mono">standardReference</span> - 표준 참조</li>
                                 </ul>
                             </div>
                         </div>
 
-                        <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-6">
-                            <h4 class="text-xl font-semibold text-white mb-3">OWL 코드 예시</h4>
-                            <div class="code-block text-sm">
-<pre class="text-emerald-400">&lt;!-- Accuracy 클래스 정의 --&gt;
+                        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                            <div class="bg-slate-800/50 border border-teal-500/40 rounded-lg p-6">
+                                <div class="flex items-center gap-2 mb-3">
+                                    <span class="text-2xl">📋</span>
+                                    <h4 class="text-xl font-semibold text-teal-400">OWL 코드 예시</h4>
+                                </div>
+                                <div class="code-block text-sm">
+<pre class="text-teal-300">&lt;!-- Accuracy 클래스 정의 --&gt;
 &lt;owl:Class rdf:about="&iso5259;Accuracy"&gt;
     &lt;rdfs:subClassOf rdf:resource="&iso5259;InherentCharacteristic"/&gt;
     &lt;rdfs:label xml:lang="en"&gt;Accuracy&lt;/rdfs:label&gt;
@@ -982,13 +986,16 @@
     &lt;rdfs:range rdf:resource="&iso5259;DataQualityMeasure"/&gt;
     &lt;rdfs:label xml:lang="ko"&gt;측정 방법&lt;/rdfs:label&gt;
 &lt;/owl:ObjectProperty&gt;</pre>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-6">
-                            <h4 class="text-xl font-semibold text-white mb-3">RDF 코드 예시</h4>
-                            <div class="code-block text-sm">
-<pre class="text-orange-400">&lt;!-- Syntactic Accuracy 측정 지표 인스턴스 --&gt;
+                            <div class="bg-slate-800/50 border border-orange-500/40 rounded-lg p-6">
+                                <div class="flex items-center gap-2 mb-3">
+                                    <span class="text-2xl">📊</span>
+                                    <h4 class="text-xl font-semibold text-orange-400">RDF 코드 예시</h4>
+                                </div>
+                                <div class="code-block text-sm">
+<pre class="text-orange-300">&lt;!-- Syntactic Accuracy 측정 지표 인스턴스 --&gt;
 &lt;owl:NamedIndividual rdf:about="&iso5259;DQM_01"&gt;
     &lt;rdf:type rdf:resource="&iso5259;DataQualityMeasure"/&gt;
     &lt;rdfs:label xml:lang="en"&gt;Syntactic Accuracy&lt;/rdfs:label&gt;
@@ -1011,6 +1018,7 @@
     &lt;rdfs:label xml:lang="ko"&gt;백분율 측정 함수&lt;/rdfs:label&gt;
     &lt;iso5259:measurementFormula&gt;(X / Y) * 100&lt;/iso5259:measurementFormula&gt;
 &lt;/owl:NamedIndividual&gt;</pre>
+                                </div>
                             </div>
                         </div>
                     </div>
