--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -966,26 +966,26 @@
                                     <h4 class="text-xl font-semibold text-teal-400">OWL 코드 예시</h4>
                                 </div>
                                 <div class="code-block text-sm">
-<pre class="text-teal-300">&lt;!-- Accuracy 클래스 정의 --&gt;
-&lt;owl:Class rdf:about="&iso5259;Accuracy"&gt;
-    &lt;rdfs:subClassOf rdf:resource="&iso5259;InherentCharacteristic"/&gt;
-    &lt;rdfs:label xml:lang="en"&gt;Accuracy&lt;/rdfs:label&gt;
-    &lt;rdfs:label xml:lang="ko"&gt;정확성&lt;/rdfs:label&gt;
-    &lt;rdfs:comment xml:lang="en"&gt;
+<pre class="text-slate-300"><span class="text-slate-500">&lt;!-- Accuracy 클래스 정의 --&gt;</span>
+<span class="text-slate-400">&lt;</span><span class="text-teal-400">owl:Class</span> <span class="text-slate-300">rdf:about=</span><span class="text-orange-300">"&iso5259;Accuracy"</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-teal-400">rdfs:subClassOf</span> <span class="text-slate-300">rdf:resource=</span><span class="text-orange-300">"&iso5259;InherentCharacteristic"</span><span class="text-slate-400">/&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-teal-400">rdfs:label</span> <span class="text-slate-300">xml:lang=</span><span class="text-orange-300">"en"</span><span class="text-slate-400">&gt;</span>Accuracy<span class="text-slate-400">&lt;/</span><span class="text-teal-400">rdfs:label</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-teal-400">rdfs:label</span> <span class="text-slate-300">xml:lang=</span><span class="text-orange-300">"ko"</span><span class="text-slate-400">&gt;</span>정확성<span class="text-slate-400">&lt;/</span><span class="text-teal-400">rdfs:label</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-teal-400">rdfs:comment</span> <span class="text-slate-300">xml:lang=</span><span class="text-orange-300">"en"</span><span class="text-slate-400">&gt;</span>
         The degree to which data correctly represents
         the real-world entity or event.
-    &lt;/rdfs:comment&gt;
-    &lt;iso5259:standardReference&gt;
+    <span class="text-slate-400">&lt;/</span><span class="text-teal-400">rdfs:comment</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-teal-400">iso5259:standardReference</span><span class="text-slate-400">&gt;</span>
         ISO/IEC 5259-2:2024, Section 6.2.1
-    &lt;/iso5259:standardReference&gt;
-&lt;/owl:Class&gt;
+    <span class="text-slate-400">&lt;/</span><span class="text-teal-400">iso5259:standardReference</span><span class="text-slate-400">&gt;</span>
+<span class="text-slate-400">&lt;/</span><span class="text-teal-400">owl:Class</span><span class="text-slate-400">&gt;</span>
 
-&lt;!-- measuredBy 속성 정의 --&gt;
-&lt;owl:ObjectProperty rdf:about="&iso5259;measuredBy"&gt;
-    &lt;rdfs:domain rdf:resource="&iso5259;DataQualityCharacteristic"/&gt;
-    &lt;rdfs:range rdf:resource="&iso5259;DataQualityMeasure"/&gt;
-    &lt;rdfs:label xml:lang="ko"&gt;측정 방법&lt;/rdfs:label&gt;
-&lt;/owl:ObjectProperty&gt;</pre>
+<span class="text-slate-500">&lt;!-- measuredBy 속성 정의 --&gt;</span>
+<span class="text-slate-400">&lt;</span><span class="text-teal-400">owl:ObjectProperty</span> <span class="text-slate-300">rdf:about=</span><span class="text-orange-300">"&iso5259;measuredBy"</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-teal-400">rdfs:domain</span> <span class="text-slate-300">rdf:resource=</span><span class="text-orange-300">"&iso5259;DataQualityCharacteristic"</span><span class="text-slate-400">/&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-teal-400">rdfs:range</span> <span class="text-slate-300">rdf:resource=</span><span class="text-orange-300">"&iso5259;DataQualityMeasure"</span><span class="text-slate-400">/&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-teal-400">rdfs:label</span> <span class="text-slate-300">xml:lang=</span><span class="text-orange-300">"ko"</span><span class="text-slate-400">&gt;</span>측정 방법<span class="text-slate-400">&lt;/</span><span class="text-teal-400">rdfs:label</span><span class="text-slate-400">&gt;</span>
+<span class="text-slate-400">&lt;/</span><span class="text-teal-400">owl:ObjectProperty</span><span class="text-slate-400">&gt;</span></pre>
                                 </div>
                             </div>
 
@@ -995,29 +995,29 @@
                                     <h4 class="text-xl font-semibold text-orange-400">RDF 코드 예시</h4>
                                 </div>
                                 <div class="code-block text-sm">
-<pre class="text-orange-300">&lt;!-- Syntactic Accuracy 측정 지표 인스턴스 --&gt;
-&lt;owl:NamedIndividual rdf:about="&iso5259;DQM_01"&gt;
-    &lt;rdf:type rdf:resource="&iso5259;DataQualityMeasure"/&gt;
-    &lt;rdfs:label xml:lang="en"&gt;Syntactic Accuracy&lt;/rdfs:label&gt;
-    &lt;rdfs:label xml:lang="ko"&gt;구문적 정확성&lt;/rdfs:label&gt;
-    &lt;iso5259:measureID&gt;DQM-01&lt;/iso5259:measureID&gt;
-    &lt;iso5259:measureName xml:lang="en"&gt;Syntactic accuracy&lt;/iso5259:measureName&gt;
-    &lt;iso5259:measureName xml:lang="ko"&gt;구문적 정확성&lt;/iso5259:measureName&gt;
-    &lt;iso5259:measures rdf:resource="&iso5259;Accuracy"/&gt;
-    &lt;iso5259:usesFunction rdf:resource="&iso5259;MF_02"/&gt;
-    &lt;rdfs:comment xml:lang="en"&gt;
+<pre class="text-slate-300"><span class="text-slate-500">&lt;!-- Syntactic Accuracy 측정 지표 인스턴스 --&gt;</span>
+<span class="text-slate-400">&lt;</span><span class="text-orange-400">owl:NamedIndividual</span> <span class="text-slate-300">rdf:about=</span><span class="text-teal-300">"&iso5259;DQM_01"</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">rdf:type</span> <span class="text-slate-300">rdf:resource=</span><span class="text-teal-300">"&iso5259;DataQualityMeasure"</span><span class="text-slate-400">/&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">rdfs:label</span> <span class="text-slate-300">xml:lang=</span><span class="text-teal-300">"en"</span><span class="text-slate-400">&gt;</span>Syntactic Accuracy<span class="text-slate-400">&lt;/</span><span class="text-orange-400">rdfs:label</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">rdfs:label</span> <span class="text-slate-300">xml:lang=</span><span class="text-teal-300">"ko"</span><span class="text-slate-400">&gt;</span>구문적 정확성<span class="text-slate-400">&lt;/</span><span class="text-orange-400">rdfs:label</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">iso5259:measureID</span><span class="text-slate-400">&gt;</span>DQM-01<span class="text-slate-400">&lt;/</span><span class="text-orange-400">iso5259:measureID</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">iso5259:measureName</span> <span class="text-slate-300">xml:lang=</span><span class="text-teal-300">"en"</span><span class="text-slate-400">&gt;</span>Syntactic accuracy<span class="text-slate-400">&lt;/</span><span class="text-orange-400">iso5259:measureName</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">iso5259:measureName</span> <span class="text-slate-300">xml:lang=</span><span class="text-teal-300">"ko"</span><span class="text-slate-400">&gt;</span>구문적 정확성<span class="text-slate-400">&lt;/</span><span class="text-orange-400">iso5259:measureName</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">iso5259:measures</span> <span class="text-slate-300">rdf:resource=</span><span class="text-teal-300">"&iso5259;Accuracy"</span><span class="text-slate-400">/&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">iso5259:usesFunction</span> <span class="text-slate-300">rdf:resource=</span><span class="text-teal-300">"&iso5259;MF_02"</span><span class="text-slate-400">/&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">rdfs:comment</span> <span class="text-slate-300">xml:lang=</span><span class="text-teal-300">"en"</span><span class="text-slate-400">&gt;</span>
         Ratio of data values that are syntactically correct
         compared to the total number of data values
-    &lt;/rdfs:comment&gt;
-&lt;/owl:NamedIndividual&gt;
+    <span class="text-slate-400">&lt;/</span><span class="text-orange-400">rdfs:comment</span><span class="text-slate-400">&gt;</span>
+<span class="text-slate-400">&lt;/</span><span class="text-orange-400">owl:NamedIndividual</span><span class="text-slate-400">&gt;</span>
 
-&lt;!-- Measurement Function 인스턴스 --&gt;
-&lt;owl:NamedIndividual rdf:about="&iso5259;MF_02"&gt;
-    &lt;rdf:type rdf:resource="&iso5259;MeasurementFunction"/&gt;
-    &lt;rdfs:label xml:lang="en"&gt;Percentage Measurement Function&lt;/rdfs:label&gt;
-    &lt;rdfs:label xml:lang="ko"&gt;백분율 측정 함수&lt;/rdfs:label&gt;
-    &lt;iso5259:measurementFormula&gt;(X / Y) * 100&lt;/iso5259:measurementFormula&gt;
-&lt;/owl:NamedIndividual&gt;</pre>
+<span class="text-slate-500">&lt;!-- Measurement Function 인스턴스 --&gt;</span>
+<span class="text-slate-400">&lt;</span><span class="text-orange-400">owl:NamedIndividual</span> <span class="text-slate-300">rdf:about=</span><span class="text-teal-300">"&iso5259;MF_02"</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">rdf:type</span> <span class="text-slate-300">rdf:resource=</span><span class="text-teal-300">"&iso5259;MeasurementFunction"</span><span class="text-slate-400">/&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">rdfs:label</span> <span class="text-slate-300">xml:lang=</span><span class="text-teal-300">"en"</span><span class="text-slate-400">&gt;</span>Percentage Measurement Function<span class="text-slate-400">&lt;/</span><span class="text-orange-400">rdfs:label</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">rdfs:label</span> <span class="text-slate-300">xml:lang=</span><span class="text-teal-300">"ko"</span><span class="text-slate-400">&gt;</span>백분율 측정 함수<span class="text-slate-400">&lt;/</span><span class="text-orange-400">rdfs:label</span><span class="text-slate-400">&gt;</span>
+    <span class="text-slate-400">&lt;</span><span class="text-orange-400">iso5259:measurementFormula</span><span class="text-slate-400">&gt;</span>(X / Y) * 100<span class="text-slate-400">&lt;/</span><span class="text-orange-400">iso5259:measurementFormula</span><span class="text-slate-400">&gt;</span>
+<span class="text-slate-400">&lt;/</span><span class="text-orange-400">owl:NamedIndividual</span><span class="text-slate-400">&gt;</span></pre>
                                 </div>
                             </div>
                         </div>
