--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -1109,13 +1109,66 @@
                 <div class="card p-8">
                     <h2 class="text-3xl font-bold mb-6 text-white">SPARQL 쿼리 실습</h2>
 
+                    <!-- SPARQL 소개 -->
+                    <div class="mb-8">
+                        <div class="bg-slate-800/50 border border-teal-500/40 rounded-lg p-6 mb-6">
+                            <div class="flex items-start gap-4">
+                                <div class="text-4xl">🔍</div>
+                                <div class="flex-1">
+                                    <h3 class="text-2xl font-semibold text-teal-400 mb-3">SPARQL이란?</h3>
+                                    <p class="text-slate-300 mb-4">
+                                        <strong class="text-white">SPARQL</strong> (SPARQL Protocol and RDF Query Language)은
+                                        <strong class="text-teal-400">시맨틱 웹의 표준 쿼리 언어</strong>입니다.
+                                        RDF 데이터베이스에서 지식을 조회하고 조작할 수 있습니다.
+                                    </p>
+
+                                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
+                                        <div>
+                                            <h4 class="text-sm font-semibold text-white mb-2">📅 역사</h4>
+                                            <ul class="text-sm text-slate-400 space-y-1">
+                                                <li>• <strong class="text-slate-300">2008년</strong>: W3C 표준 승인 (SPARQL 1.0)</li>
+                                                <li>• <strong class="text-slate-300">2013년</strong>: SPARQL 1.1 권고안</li>
+                                                <li>• <strong class="text-slate-300">2024년</strong>: 현재까지 활발히 사용 중</li>
+                                            </ul>
+                                        </div>
+                                        <div>
+                                            <h4 class="text-sm font-semibold text-white mb-2">🌐 현황</h4>
+                                            <ul class="text-sm text-slate-400 space-y-1">
+                                                <li>• <strong class="text-slate-300">Wikidata</strong>: 100억+ 트리플</li>
+                                                <li>• <strong class="text-slate-300">DBpedia</strong>: Wikipedia 지식 그래프</li>
+                                                <li>• <strong class="text-slate-300">생명과학</strong>: UniProt, ChEMBL</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+
+                                    <div class="flex flex-wrap gap-2">
+                                        <a href="https://www.w3.org/TR/sparql11-query/" target="_blank" rel="noopener"
+                                           class="inline-flex items-center gap-1 text-xs bg-slate-700/50 hover:bg-slate-700 px-3 py-1.5 rounded text-teal-400 transition-colors">
+                                            📘 W3C SPARQL 1.1 명세
+                                            <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                                            </svg>
+                                        </a>
+                                        <a href="https://query.wikidata.org/" target="_blank" rel="noopener"
+                                           class="inline-flex items-center gap-1 text-xs bg-slate-700/50 hover:bg-slate-700 px-3 py-1.5 rounded text-orange-400 transition-colors">
+                                            🔬 Wikidata SPARQL 실습
+                                            <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                                            </svg>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h3 class="text-2xl font-semibold text-slate-200 mb-4">인터랙티브 쿼리 실습</h3>
                     <p class="text-slate-300 mb-6">
-                        SPARQL(SPARQL Protocol and RDF Query Language)은 RDF 데이터를 위한 쿼리 언어입니다.
-                        아래 예제 쿼리를 선택하거나 직접 작성하여 실행해보세요.
+                        아래 예제 쿼리를 선택하거나 직접 작성하여 ISO 5259-2 온톨로지를 탐색해보세요.
                     </p>
 
                     <!-- Query Selector -->
-                    <div class="mb-4">
+                    <div class="mb-6">
                         <label class="text-slate-300 mb-2 block font-semibold">예제 쿼리 선택:</label>
                         <select id="query-selector" class="w-full bg-slate-800 text-white px-4 py-3 rounded-lg border border-slate-700">
                             <option value="query1">쿼리 1: 모든 품질 특성 조회 (한글)</option>
@@ -1126,9 +1179,33 @@
                         </select>
                     </div>
 
+                    <!-- SPARQL Query Preview (with syntax highlighting) -->
+                    <div class="mb-4">
+                        <label class="text-slate-300 mb-2 block font-semibold">쿼리 미리보기:</label>
+                        <div class="bg-slate-800/50 border border-slate-700 rounded-lg p-4 mb-4">
+                            <div class="code-block text-sm">
+<pre class="text-slate-300"><span class="text-teal-400">PREFIX</span> <span class="text-orange-400">iso5259:</span> <span class="text-slate-400">&lt;</span>http://pebblous.ai/ontology/iso5259-2#<span class="text-slate-400">&gt;</span>
+<span class="text-teal-400">PREFIX</span> <span class="text-orange-400">rdfs:</span> <span class="text-slate-400">&lt;</span>http://www.w3.org/2000/01/rdf-schema#<span class="text-slate-400">&gt;</span>
+<span class="text-teal-400">PREFIX</span> <span class="text-orange-400">owl:</span> <span class="text-slate-400">&lt;</span>http://www.w3.org/2002/07/owl#<span class="text-slate-400">&gt;</span>
+
+<span class="text-teal-400">SELECT</span> ?characteristic ?labelKo ?labelEn
+<span class="text-teal-400">WHERE</span> {
+  ?characteristic <span class="text-orange-400">rdf:type</span> <span class="text-orange-400">owl:Class</span> .
+  ?characteristic <span class="text-orange-400">rdfs:subClassOf</span> <span class="text-orange-400">iso5259:DataQualityCharacteristic</span> .
+  ?characteristic <span class="text-orange-400">rdfs:label</span> ?labelKo .
+  ?characteristic <span class="text-orange-400">rdfs:label</span> ?labelEn .
+
+  <span class="text-teal-400">FILTER</span> (<span class="text-orange-400">lang</span>(?labelKo) = <span class="text-slate-400">"ko"</span>)
+  <span class="text-teal-400">FILTER</span> (<span class="text-orange-400">lang</span>(?labelEn) = <span class="text-slate-400">"en"</span>)
+}
+<span class="text-teal-400">ORDER BY</span> ?labelKo</pre>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- SPARQL Editor -->
                     <div class="mb-4">
-                        <label class="text-slate-300 mb-2 block font-semibold">SPARQL 쿼리:</label>
+                        <label class="text-slate-300 mb-2 block font-semibold">SPARQL 쿼리 편집:</label>
                         <textarea id="sparql-editor" class="sparql-editor w-full h-64 p-4 rounded-lg text-sm" placeholder="SPARQL 쿼리를 입력하세요...">PREFIX iso5259: <http://pebblous.ai/ontology/iso5259-2#>
 PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
 PREFIX owl: <http://www.w3.org/2002/07/owl#>
