--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -344,18 +344,33 @@
             top: 0;
             width: 280px;
             height: 100vh;
-            background: rgba(15, 23, 42, 0.95);
-            border-right: 1px solid #334155;
-            padding: 2rem 1.5rem;
+            background: rgba(15, 23, 42, 0.85);
+            border-right: 1px solid rgba(51, 65, 85, 0.5);
+            padding: 1.5rem 1rem;
             overflow-y: auto;
             z-index: 1000;
             transform: translateX(-100%);
             transition: transform 0.3s ease;
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
         }
         #toc-sidebar.open {
             transform: translateX(0);
         }
+        #toc-sidebar::-webkit-scrollbar {
+            width: 6px;
+        }
+        #toc-sidebar::-webkit-scrollbar-track {
+            background: transparent;
+        }
+        #toc-sidebar::-webkit-scrollbar-thumb {
+            background: rgba(148, 163, 184, 0.3);
+            border-radius: 3px;
+        }
+        #toc-sidebar::-webkit-scrollbar-thumb:hover {
+            background: rgba(148, 163, 184, 0.5);
+        }
+
         #toc-toggle {
             position: fixed;
             left: 1rem;
@@ -382,6 +397,7 @@
             height: 24px;
             stroke: white;
         }
+
         .toc {
             list-style: none;
             padding: 0;
@@ -391,45 +407,133 @@
             list-style: none;
             padding: 0;
             margin: 0;
+            padding-left: 0.5rem;
         }
         .toc-list li {
-            margin-bottom: 0.25rem;
+            margin-bottom: 0.125rem;
+            position: relative;
         }
         .toc-link {
             display: block;
-            padding: 0.5rem 0.75rem;
+            padding: 0.375rem 0.5rem;
             color: #94a3b8;
             text-decoration: none;
             border-left: 2px solid transparent;
             transition: all 0.2s;
-            font-size: 0.875rem;
-            line-height: 1.4;
+            font-size: 0.8125rem;
+            line-height: 1.3;
+            position: relative;
         }
         .toc-link:hover {
-            color: #14b8a6;
-            border-left-color: #14b8a6;
-            background: rgba(20, 184, 166, 0.1);
-        }
-        .toc-link:active {
             color: #F86825;
             border-left-color: #F86825;
             background: rgba(248, 104, 37, 0.1);
         }
+        .toc-link:active {
+            color: #F86825;
+            border-left-color: #F86825;
+            background: rgba(248, 104, 37, 0.15);
+        }
 
-        /* Hierarchy levels */
+        /* Hierarchy levels with vertical guide lines */
+        .toc-h2 {
+            position: relative;
+        }
+        .toc-h2-wrapper {
+            display: grid;
+            grid-template-columns: 18px 1fr;
+            align-items: center;
+            gap: 0.375rem;
+        }
         .toc-h2 .toc-link {
             font-weight: 600;
-            font-size: 0.9rem;
-            padding-left: 0.75rem;
+            font-size: 0.875rem;
+            padding-left: 0;
+            color: #cbd5e1;
+        }
+
+        /* Toggle button for collapsible sections */
+        .toc-toggle-btn {
+            width: 18px;
+            height: 18px;
+            padding: 0;
+            border: none;
+            background: transparent;
+            color: #94a3b8;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.2s;
+            flex-shrink: 0;
+        }
+        .toc-toggle-btn:hover {
+            color: #F86825;
+        }
+        .toc-toggle-icon {
+            transition: transform 0.2s ease;
+            transform: rotate(-90deg);
+        }
+        .toc-toggle-btn.expanded .toc-toggle-icon {
+            transform: rotate(0deg);
+        }
+        .toc-toggle-spacer {
+            width: 18px;
+            height: 18px;
+            flex-shrink: 0;
+        }
+
+        /* Children container */
+        .toc-children {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            margin-left: 1.5rem;
+            overflow: hidden;
+            max-height: 1000px;
+            transition: max-height 0.3s ease, opacity 0.3s ease;
+            opacity: 1;
+        }
+        .toc-children.collapsed {
+            max-height: 0;
+            opacity: 0;
+        }
+
+        .toc-h3 {
+            position: relative;
+            padding-left: 1rem;
+        }
+        .toc-h3::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            width: 1px;
+            background: rgba(148, 163, 184, 0.08);
         }
         .toc-h3 .toc-link {
-            font-size: 0.85rem;
+            font-size: 0.8rem;
+            padding-left: 0.75rem;
+            color: #94a3b8;
+        }
+
+        .toc-h4 {
+            position: relative;
             padding-left: 1.5rem;
-            color: #9ca3af;
+        }
+        .toc-h4::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            width: 1px;
+            background: rgba(148, 163, 184, 0.08);
         }
         .toc-h4 .toc-link {
-            font-size: 0.8rem;
-            padding-left: 2.25rem;
+            font-size: 0.75rem;
+            padding-left: 0.75rem;
             color: #9ca3af;
         }
 
@@ -482,12 +586,13 @@
 
         /* TOC Header */
         #toc-header {
-            font-size: 1.25rem;
-            font-weight: 700;
+            font-size: 1rem;
+            font-weight: 600;
             color: #F86825;
-            margin-bottom: 1.5rem;
-            padding-bottom: 1rem;
-            border-bottom: 2px solid #334155;
+            margin-bottom: 1rem;
+            padding-bottom: 0.75rem;
+            border-bottom: 1px solid rgba(51, 65, 85, 0.4);
+            letter-spacing: 0.025em;
         }
 
         /* Mobile responsive */
@@ -2460,7 +2565,7 @@ ORDER BY ?date`
             }
         });
 
-        // Build TOC manually
+        // Build TOC manually with collapsible tree structure
         function buildToc() {
             const tocContainer = document.querySelector('.toc');
             if (!tocContainer) return;
@@ -2473,7 +2578,9 @@ ORDER BY ?date`
                 return;
             }
 
-            let tocHtml = '<ul class="toc-list">';
+            // Generate IDs and build tree structure
+            const tree = [];
+            let currentH2 = null;
 
             allHeadings.forEach(function(heading, index) {
                 // Generate ID if not exists
@@ -2491,16 +2598,49 @@ ORDER BY ?date`
                 const text = heading.textContent.trim();
                 const id = heading.id;
 
-                // Determine indent level
-                let levelClass = 'toc-h2';
-                if (level === 'h3') levelClass = 'toc-h3';
-                if (level === 'h4') levelClass = 'toc-h4';
+                if (level === 'h2') {
+                    currentH2 = { level, text, id, children: [] };
+                    tree.push(currentH2);
+                } else if (currentH2) {
+                    currentH2.children.push({ level, text, id });
+                }
+            });
+
+            // Build HTML with collapsible sections
+            let tocHtml = '<ul class="toc-list">';
+
+            tree.forEach(function(h2Node, h2Index) {
+                const hasChildren = h2Node.children.length > 0;
+                const collapseId = 'toc-section-' + h2Index;
 
                 tocHtml += `
-                    <li class="${levelClass}">
-                        <a href="#${id}" class="toc-link" data-heading-id="${id}">
-                            ${text}
-                        </a>
+                    <li class="toc-h2">
+                        <div class="toc-h2-wrapper">
+                            ${hasChildren ? `
+                                <button class="toc-toggle-btn" data-target="${collapseId}" aria-label="Toggle section">
+                                    <svg class="toc-toggle-icon" width="12" height="12" viewBox="0 0 12 12" fill="none">
+                                        <path d="M3 4.5L6 7.5L9 4.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </button>
+                            ` : '<span class="toc-toggle-spacer"></span>'}
+                            <a href="#${h2Node.id}" class="toc-link" data-heading-id="${h2Node.id}">
+                                ${h2Node.text}
+                            </a>
+                        </div>
+                        ${hasChildren ? `
+                            <ul class="toc-children collapsed" id="${collapseId}">
+                                ${h2Node.children.map(child => {
+                                    const levelClass = child.level === 'h3' ? 'toc-h3' : 'toc-h4';
+                                    return `
+                                        <li class="${levelClass}">
+                                            <a href="#${child.id}" class="toc-link" data-heading-id="${child.id}">
+                                                ${child.text}
+                                            </a>
+                                        </li>
+                                    `;
+                                }).join('')}
+                            </ul>
+                        ` : ''}
                     </li>
                 `;
             });
@@ -2508,7 +2648,21 @@ ORDER BY ?date`
             tocHtml += '</ul>';
             tocContainer.innerHTML = tocHtml;
 
-            // Add click handlers
+            // Add toggle button handlers
+            const toggleButtons = tocContainer.querySelectorAll('.toc-toggle-btn');
+            toggleButtons.forEach(function(btn) {
+                btn.addEventListener('click', function(e) {
+                    e.stopPropagation();
+                    const targetId = this.getAttribute('data-target');
+                    const targetList = document.getElementById(targetId);
+                    if (targetList) {
+                        targetList.classList.toggle('collapsed');
+                        this.classList.toggle('expanded');
+                    }
+                });
+            });
+
+            // Add link click handlers
             const tocLinks = tocContainer.querySelectorAll('.toc-link');
             tocLinks.forEach(function(link) {
                 link.addEventListener('click', function(e) {
