--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -344,15 +344,15 @@
             top: 0;
             width: 280px;
             height: 100vh;
-            background: rgba(15, 23, 42, 0.85);
-            border-right: 1px solid rgba(51, 65, 85, 0.5);
+            background: rgba(15, 23, 42, 0.95);
+            border: none;
             padding: 1.5rem 1rem;
             overflow-y: auto;
             z-index: 1000;
             transform: translateX(-100%);
             transition: transform 0.3s ease;
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
         }
         #toc-sidebar.open {
             transform: translateX(0);
@@ -398,6 +398,7 @@
             stroke: white;
         }
 
+        /* TOC Base */
         .toc {
             list-style: none;
             padding: 0;
@@ -407,52 +408,40 @@
             list-style: none;
             padding: 0;
             margin: 0;
-            padding-left: 0.5rem;
         }
-        .toc-list li {
-            margin-bottom: 0.125rem;
-            position: relative;
-        }
-        .toc-link {
-            display: block;
-            padding: 0.375rem 0.5rem;
-            color: #94a3b8;
-            text-decoration: none;
-            border-left: 2px solid transparent;
-            transition: all 0.2s;
-            font-size: 0.8125rem;
-            line-height: 1.3;
-            position: relative;
-        }
-        .toc-link:hover {
-            color: #F86825;
-            border-left-color: #F86825;
-            background: rgba(248, 104, 37, 0.1);
-        }
-        .toc-link:active {
-            color: #F86825;
-            border-left-color: #F86825;
-            background: rgba(248, 104, 37, 0.15);
+        .toc-list > li {
+            margin-bottom: 0.15rem;
         }
 
-        /* Hierarchy levels with vertical guide lines */
-        .toc-h2 {
-            position: relative;
+        /* TOC Links */
+        .toc-link {
+            display: block;
+            padding: 0.25rem 0.5rem;
+            color: #94a3b8;
+            text-decoration: none;
+            transition: all 0.2s;
+            border-radius: 0.25rem;
+            line-height: 1.3;
         }
+        .toc-link:hover {
+            background: #F86825;
+            color: #ffffff;
+        }
+
+        /* H2 Level */
         .toc-h2-wrapper {
-            display: grid;
-            grid-template-columns: 18px 1fr;
+            display: flex;
             align-items: center;
-            gap: 0.375rem;
+            gap: 0.25rem;
         }
         .toc-h2 .toc-link {
+            flex: 1;
             font-weight: 600;
-            font-size: 0.875rem;
-            padding-left: 0;
+            font-size: 0.8rem;
             color: #cbd5e1;
         }
 
-        /* Toggle button for collapsible sections */
+        /* Toggle Button */
         .toc-toggle-btn {
             width: 18px;
             height: 18px;
@@ -461,80 +450,113 @@
             background: transparent;
             color: #94a3b8;
             cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: all 0.2s;
             flex-shrink: 0;
         }
         .toc-toggle-btn:hover {
             color: #F86825;
         }
         .toc-toggle-icon {
-            transition: transform 0.2s ease;
+            transition: transform 0.2s;
             transform: rotate(-90deg);
         }
         .toc-toggle-btn.expanded .toc-toggle-icon {
-            transform: rotate(0deg);
+            transform: rotate(0);
         }
         .toc-toggle-spacer {
             width: 18px;
             height: 18px;
-            flex-shrink: 0;
         }
 
-        /* Children container */
+        /* Children Container */
         .toc-children {
             list-style: none;
             padding: 0;
             margin: 0;
-            margin-left: 1.5rem;
+            margin-left: 1.25rem;
             overflow: hidden;
             max-height: 1000px;
             transition: max-height 0.3s ease, opacity 0.3s ease;
-            opacity: 1;
         }
         .toc-children.collapsed {
             max-height: 0;
             opacity: 0;
         }
-
-        .toc-h3 {
-            position: relative;
-            padding-left: 1rem;
+        .toc-children > li {
+            margin-bottom: 0.1rem;
         }
-        .toc-h3::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            bottom: 0;
-            width: 1px;
-            background: rgba(148, 163, 184, 0.08);
+
+        /* H3 Level */
+        .toc-h3-wrapper {
+            display: flex;
+            align-items: center;
+            gap: 0.25rem;
         }
         .toc-h3 .toc-link {
-            font-size: 0.8rem;
-            padding-left: 0.75rem;
-            color: #94a3b8;
+            font-size: 0.75rem;
+            padding-left: 0.5rem;
         }
 
-        .toc-h4 {
-            position: relative;
-            padding-left: 1.5rem;
-        }
-        .toc-h4::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            bottom: 0;
-            width: 1px;
-            background: rgba(148, 163, 184, 0.08);
-        }
+        /* H4 Level */
         .toc-h4 .toc-link {
-            font-size: 0.75rem;
+            font-size: 0.7rem;
             padding-left: 0.75rem;
             color: #9ca3af;
+        }
+
+        /* TOC Header Controls */
+        #toc-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 1rem;
+            padding-bottom: 0.75rem;
+            border-bottom: 1px solid rgba(148, 163, 184, 0.2);
+        }
+        #toc-header h3 {
+            font-size: 0.9rem;
+            font-weight: 600;
+            color: #cbd5e1;
+            margin: 0;
+        }
+        .toc-control-buttons {
+            display: flex;
+            gap: 0.25rem;
+        }
+        .toc-control-btn {
+            padding: 0.15rem 0.4rem;
+            font-size: 0.65rem;
+            background: rgba(148, 163, 184, 0.1);
+            color: #94a3b8;
+            border: 1px solid rgba(148, 163, 184, 0.2);
+            border-radius: 0.25rem;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+        .toc-control-btn:hover {
+            background: rgba(248, 104, 37, 0.2);
+            color: #F86825;
+            border-color: rgba(248, 104, 37, 0.4);
+        }
+
+        /* Nuclear option - remove ALL borders in sidebar */
+        #toc-sidebar * {
+            border: none !important;
+            border-left: none !important;
+            border-right: none !important;
+            border-top: none !important;
+            border-bottom: none !important;
+        }
+        #toc-sidebar *::before,
+        #toc-sidebar *::after {
+            display: none !important;
+            content: none !important;
+        }
+        /* Exception: Allow border for header */
+        #toc-header {
+            border-bottom: 1px solid rgba(148, 163, 184, 0.2) !important;
+        }
+        .toc-control-btn {
+            border: 1px solid rgba(148, 163, 184, 0.2) !important;
         }
 
         /* ===== Progress Bar ===== */
@@ -584,16 +606,6 @@
             stroke: white;
         }
 
-        /* TOC Header */
-        #toc-header {
-            font-size: 1rem;
-            font-weight: 600;
-            color: #F86825;
-            margin-bottom: 1rem;
-            padding-bottom: 0.75rem;
-            border-bottom: 1px solid rgba(51, 65, 85, 0.4);
-            letter-spacing: 0.025em;
-        }
 
         /* Mobile responsive */
         @media (max-width: 768px) {
@@ -621,7 +633,13 @@
 
     <!-- TOC Sidebar -->
     <nav id="toc-sidebar">
-        <div id="toc-header">목차</div>
+        <div id="toc-header">
+            <h3>목차</h3>
+            <div class="toc-control-buttons">
+                <button id="toc-expand-all" class="toc-control-btn">모두 열기</button>
+                <button id="toc-collapse-all" class="toc-control-btn">모두 닫기</button>
+            </div>
+        </div>
         <div class="toc"></div>
     </nav>
 
@@ -2565,6 +2583,11 @@ ORDER BY ?date`
             }
         });
 
+        // Close TOC when mouse leaves sidebar
+        tocSidebar.addEventListener('mouseleave', function() {
+            tocSidebar.classList.remove('open');
+        });
+
         // Build TOC manually with collapsible tree structure
         function buildToc() {
             const tocContainer = document.querySelector('.toc');
@@ -2578,9 +2601,10 @@ ORDER BY ?date`
                 return;
             }
 
-            // Generate IDs and build tree structure
+            // Generate IDs and build nested tree structure
             const tree = [];
             let currentH2 = null;
+            let currentH3 = null;
 
             allHeadings.forEach(function(heading, index) {
                 // Generate ID if not exists
@@ -2601,23 +2625,27 @@ ORDER BY ?date`
                 if (level === 'h2') {
                     currentH2 = { level, text, id, children: [] };
                     tree.push(currentH2);
-                } else if (currentH2) {
-                    currentH2.children.push({ level, text, id });
+                    currentH3 = null;
+                } else if (level === 'h3' && currentH2) {
+                    currentH3 = { level, text, id, children: [] };
+                    currentH2.children.push(currentH3);
+                } else if (level === 'h4' && currentH3) {
+                    currentH3.children.push({ level, text, id });
                 }
             });
 
-            // Build HTML with collapsible sections
+            // Build HTML with fully nested collapsible sections
             let tocHtml = '<ul class="toc-list">';
 
             tree.forEach(function(h2Node, h2Index) {
                 const hasChildren = h2Node.children.length > 0;
-                const collapseId = 'toc-section-' + h2Index;
+                const h2CollapseId = 'toc-section-' + h2Index;
 
                 tocHtml += `
                     <li class="toc-h2">
                         <div class="toc-h2-wrapper">
                             ${hasChildren ? `
-                                <button class="toc-toggle-btn" data-target="${collapseId}" aria-label="Toggle section">
+                                <button class="toc-toggle-btn" data-target="${h2CollapseId}" aria-label="Toggle section">
                                     <svg class="toc-toggle-icon" width="12" height="12" viewBox="0 0 12 12" fill="none">
                                         <path d="M3 4.5L6 7.5L9 4.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                     </svg>
@@ -2628,14 +2656,36 @@ ORDER BY ?date`
                             </a>
                         </div>
                         ${hasChildren ? `
-                            <ul class="toc-children collapsed" id="${collapseId}">
-                                ${h2Node.children.map(child => {
-                                    const levelClass = child.level === 'h3' ? 'toc-h3' : 'toc-h4';
+                            <ul class="toc-children collapsed" id="${h2CollapseId}">
+                                ${h2Node.children.map((h3Node, h3Index) => {
+                                    const hasH4Children = h3Node.children && h3Node.children.length > 0;
+                                    const h3CollapseId = `toc-section-${h2Index}-${h3Index}`;
+
                                     return `
-                                        <li class="${levelClass}">
-                                            <a href="#${child.id}" class="toc-link" data-heading-id="${child.id}">
-                                                ${child.text}
-                                            </a>
+                                        <li class="toc-h3">
+                                            <div class="toc-h3-wrapper">
+                                                ${hasH4Children ? `
+                                                    <button class="toc-toggle-btn" data-target="${h3CollapseId}" aria-label="Toggle subsection">
+                                                        <svg class="toc-toggle-icon" width="10" height="10" viewBox="0 0 12 12" fill="none">
+                                                            <path d="M3 4.5L6 7.5L9 4.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                                        </svg>
+                                                    </button>
+                                                ` : '<span class="toc-toggle-spacer"></span>'}
+                                                <a href="#${h3Node.id}" class="toc-link" data-heading-id="${h3Node.id}">
+                                                    ${h3Node.text}
+                                                </a>
+                                            </div>
+                                            ${hasH4Children ? `
+                                                <ul class="toc-children collapsed" id="${h3CollapseId}">
+                                                    ${h3Node.children.map(h4Node => `
+                                                        <li class="toc-h4">
+                                                            <a href="#${h4Node.id}" class="toc-link" data-heading-id="${h4Node.id}">
+                                                                ${h4Node.text}
+                                                            </a>
+                                                        </li>
+                                                    `).join('')}
+                                                </ul>
+                                            ` : ''}
                                         </li>
                                     `;
                                 }).join('')}
@@ -2699,6 +2749,40 @@ ORDER BY ?date`
 
         // Call initialization
         buildToc();
+
+        // Expand All / Collapse All buttons
+        const expandAllBtn = document.getElementById('toc-expand-all');
+        const collapseAllBtn = document.getElementById('toc-collapse-all');
+
+        if (expandAllBtn) {
+            expandAllBtn.addEventListener('click', function() {
+                const allChildren = document.querySelectorAll('#toc-sidebar .toc-children');
+                const allToggleBtns = document.querySelectorAll('#toc-sidebar .toc-toggle-btn');
+
+                allChildren.forEach(function(child) {
+                    child.classList.remove('collapsed');
+                });
+
+                allToggleBtns.forEach(function(btn) {
+                    btn.classList.add('expanded');
+                });
+            });
+        }
+
+        if (collapseAllBtn) {
+            collapseAllBtn.addEventListener('click', function() {
+                const allChildren = document.querySelectorAll('#toc-sidebar .toc-children');
+                const allToggleBtns = document.querySelectorAll('#toc-sidebar .toc-toggle-btn');
+
+                allChildren.forEach(function(child) {
+                    child.classList.add('collapsed');
+                });
+
+                allToggleBtns.forEach(function(btn) {
+                    btn.classList.remove('expanded');
+                });
+            });
+        }
 
         // Progress Bar
         const progressBar = document.getElementById('progress-bar');
